# AI-Powered-Developer-Tool-Research-Assistant

complex_one/: .env  main.py  pyproject.toml  requirments.txt
complex_one/src/: firecrawl.py  workflow.py
simple_one/: .env  main.py  pyproject.toml  requirments.txt
